_scss/layout.scss
/* ==========================================================================
HEADER
========================================================================== */


.hero {
    background-image: -webkit-linear-gradient(45deg, #FC2B90, #FD4560, #FE5E30 100%);
    background-image: -o-linear-gradient(45deg, #FC2B90, #FD4560, #FE5E30 100%);
    background-image: linear-gradient(45deg, #FC2B90, #FD4560, #FE5E30 100%);       
    width: 100%;
    margin-bottom: 40px;
    padding: 50px 0;
}


.hero h1, .hero-intern {
    color: #fff;
}

.hero p {
    color: #fff;
    text-align: center;
}

.home .page {
    padding-top: 0;
}

.jumbo {
    padding: 120px 0;
    height: 100%;
}




.contact a {
    color: #EB3349;
}

.main-header {
    padding: 10px 0;
    z-index: 9999;
    opacity: 0.9;
    height: 80px;
    position:absolute;
    top: 0;
    transition: top 0.2s ease-in-out;
    width: 100%;
    color: #fff;
    margin-bottom: 60px;
}

.nav-up {
    top: -80px;
}


.logo {
  text-decoration: none;
  font-weight: 700;
}

.logo span {
  font-weight: 300;
}

.logo a {
color: #FFF;
font-weight: 700;
}
.logo a:visited {
    color: #fff;
}

.main-header nav {
  padding-top: 10px;
  margin-left: 0;
}

.menu li {
  display: inline;
  line-height: 32px;
  vertical-align: baseline;
  font-size: 16px;
  font-family: 'Source Sans Pro', sans-serif;
}

.menu li a {
    color: #fff;
    font-weight: 300;
    text-transform: uppercase;
}



li.item00 {
  font-weight: bold;
  text-transform: none;
  font-size: 1.2em;
  letter-spacing: -1px;
}

/* Larger than mobile */
@media (max-width: 400px) { 


  .social-networks li {
    text-align: left;
  }


}

/* ==========================================================================
FOOTER
========================================================================== */

footer {
  padding: 10px 0 0 0;
  font-size: 12px;
}

footer .container {
  padding-top: 40px;
}

footer p {
  font-size: 1.1em;
  color: #888;
    text-align: center;
}


footer h5 {
  font-size: 14px;
  font-weight: normal;
  letter-spacing: normal;
}

footer h5 span {
  font-size: 18px;
  display: block;
  font-weight: bold;
  letter-spacing: -1px;
}





.thumb {
  margin-bottom: 40px;
}




.thumb .project-name {
  text-align: center;
  font-size: .8em;
}

.project h2 {
  font-size: 48px;
  margin-bottom: 40px;
  text-align: center;
}

@media (max-width: 400px) {

  .project h2 {
      line-height: 30px;
      font-size: 30px;
  }

}


/* ==========================================================================
LAYOUT
========================================================================== */


.posts {
  padding: 20px 0;

}

.post-date {
  display: block;
  color: $white;
  font-size: 18px;
  font-weight: 300;
}

.item .post-date {
  display: block;
  text-align: right;
  line-height: 32px;
    color: #999;
}


@media (max-width: 400px) {
  .item .post-date {
    text-align: left;
  }
}

@media (max-width: 550px) {
  .item .post-date {
    text-align: left;
  }
}

.post-title {
  font-size: 30px;
  line-height: 38px;
  margin-top: 0;
  margin-bottom: 10px;
}

.post-title h1 {
    margin-bottom: 0;
}

.post-detail .post-title {
  font-size: 40px;
  line-height: 38px;
}

.read-more {
  font-size: 14px;
}

.excerpt {
  margin-bottom: 20px;
}

.excerpt p {
  font-style: 16px;
  line-height: 32px;
  color: $gray-9;
  font-weight: 300;
}
.project-detail h4 {
  line-height: 28px;
  font-size: 14px;
  letter-spacing: -1px;
  margin-bottom: 20px;
  
}

.project-detail a {
  color: #333;
}

.detail p {
  font-size: 1.4em;
  line-height: 36px;
  text-align: center;
}

@media (max-width: 400px) {

  .nav-up {
    top: -80px;
  }


  .logo {
    text-align: center;
    margin-bottom: 0;
    font-size: 18px;
    line-height: 20px;
  }

  h2 {
    font-size: 28px;
  }

  .heading {
    font-size: 50px;
    letter-spacing: -1px;
  }

  p {
    font-size: 18px;
    line-height: 32px;
  }

  ul li, ol li {
    font-size: 18px;
    line-height: 32px;
  }

  .project-detail h2 {
      line-height: 38px;
      font-size: 30px;
  }

  .post-detail .post-title {
    font-size: 40px;
    line-height: 50px;
}

  .content .post-title {
      line-height: 36px;
      font-size: 28px;
  }



}

@media (min-width: 550px) {

  .project-detail h4 {
    line-height: 28px;
  }
  
  .project-detail h2 {
    font-size: 28px;
  }
  
.post-detail .post-title {
  font-size: 40px;
  line-height: 50px;
}

}

.comments {
  margin-top: 40px;
}

/* ==========================================================================
PAGINATION
========================================================================== */

.pagination {
  width: 100%;
  padding: 20px 0;
  margin-left: 0;
}

.pagination ul {
  text-align: left;
  margin-left: 0;
  padding-left: 0;
  height: 30px;
}

.pagination ul li {
  display: inline;
  line-height: 32px;
  margin-right: 40px;
  font-size: 1em;
    margin-left: 0;
}



/* ==========================================================================
IMAGEM RESPONSIVA
========================================================================== */

img.scale, img.responsive {
    max-width: 100%;
    height: auto;
}


/* ==========================================================================
VIDEO RESPONSIVO
========================================================================== */

.videoWrapper {
      position: relative;
      padding-bottom: 56.25%;
      padding-top: 25px;
      height: 0;
}

.videoWrapper iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
}

.project-detail {
  margin-bottom: 40px;
  overflow:hidden;
}



.project-detail:hover img {
  opacity: 0.8;
}

/* ==========================================================================
HIGHLIGHT
========================================================================== */
figure.highlight {
  margin: 0;
  padding: 0;
} 



/* Back to Top */


#back-to-top {
    position: fixed;
    bottom: 20px;
    right: 20px;
    z-index: 9999;
    width: 32px;
    height: 32px;
    text-align: center;
    line-height: 30px;
    background: #f857a6; /* fallback for old browsers */
    background: -webkit-linear-gradient(right, #f857a6, #ff5858);
    background: -o-linear-gradient(right, #f857a6, #ff5858);
    background: linear-gradient(to left, #f857a6, #ff5858); /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    color: #fff;
    cursor: pointer;
    border: 0;
    border-radius: 2px;
    text-decoration: none;
    transition: opacity 0.2s ease-out;
    opacity: 0;
}
#back-to-top:hover {
    background: #F88B98;
}
#back-to-top.show {
    opacity: 1;
}

/* Selected Work */

.selected-work .row {
  margin-bottom: 30px;
}

.selected-work h3 {
    font-size: 16px;
    line-height: 22px;
    margin-bottom: 20px;
    letter-spacing: normal;
    text-align: center;
    color: #888;
    font-weight: 700;
}

.selected-work h3 a {
  color: #333;
}

.container .button {
  margin-bottom: 40px;
}


.page {
  padding-top: 100px;
}

.next-project {
  padding: 40px 0;
  text-align: center;
}

